# Project-III

./: .gitignore  refrag_v1.ipynb  refrag_v2.ipynb
report/paper/: README.md  feedbacklog.typ  metadata.typ  proposal.typ  thesis.typ  thesis.yml
report/paper/.github/: copilot-instructions.md
report/paper/content/: abstract.typ  abstract_en.typ  acknowledgement.typ  background.typ  conclusion.typ  data_preprocessing.typ  evaluation.typ  introduction.typ  model_application.typ  model_architecture.typ  model_evaluation.typ  model_implementation.typ  model_preparation.typ  related_work.typ  requirements.typ  summary.typ  system_design.typ  transparency_ai_tools.typ
report/paper/layout/: abstract.typ  acknowledgement.typ  cite.cls  cover.typ  disclaimer.typ  feedbacklog_template.typ  fonts.typ  proposal_template.typ  registration_certificate.typ  titlepage.typ  (+1 more)
src/: README.md  justfile  pyproject.toml
src/data/: cpt_train_aligned.jsonl  rag_eval_test.jsonl  rag_test_valid.jsonl  rag_train_aligned.jsonl
src/docs/: COMPARISON_REPORT.md  IMPLEMENTATION_COMPARISON.md  REFRAG_KEY_INSIGHTS.md
src/docs/blogs/: refrag_explained_youtube_vid_id_Ek0tZootK00.md  rethinking_refrag.md
src/eval/: evaluate_comparison.py  run_multiple_evaluations.py
src/scripts/: debug_nan.py  rag_quickstart.sh  refrag_quickstart_auto_accel.sh  refrag_quickstart_auto_accel_uv.sh  refrag_v2_quickstart.sh  run_ui.sh
src/src/: rag.py  refrag.py  refrag_v2.py
src/src/bnwikirag/: download_bnwiki.py
src/src/notebook/: refrag_v1_explained.ipynb  refrag_v2.ipynb
src/src/ui/: README.md  app.py
(+3 files in other folders)
